en/identity-server/5.11.0/docs/setup/working-with-product-observability.md
# Working with Product Observability

Product observability enables rapid debugging of product issues. WSO2
Identity Server (WSO2 IS) facilitates product observability by logging
the time taken for LDAP and JDBC database calls. This helps to track
down any latencies caused by database calls in an instance. The request
calls and response calls are correlated via a correlation ID that is
sent in the request call.

![Correleation ID](../assets/img/using-wso2-identity-server/correlation-id.png) 

!!! note    
    By default, product observability is not enabled as it impacts on the
    product's performance. 
    

Let's explore the following topics to learn more.

### Configuring product observability

#### log4j configs

!!! Warning
    Note that WSO2 Identity Server 5.9.0, 5.10.0, and 5.11.0 are affected by the **Log4j2 zero-day** vulnerability, which has been reported to WSO2 on 10th December 2021. You can mitigate this vulnerability in your product by following our [instructions and guidelines](https://docs.wso2.com/pages/viewpage.action?pageId=180948677).

Follow the steps below to set up the correlation logs related to the
database calls.

1.  Open the `          log4j2.properties         ` file in the
    `          <IS_HOME>/repository/conf         ` directory.
2.  Append the appender `CORRELATION` to the list of all appenders as follows.

      ``` toml
      appenders = CARBON_CONSOLE, CARBON_LOGFILE, AUDIT_LOGFILE, ATOMIKOS_LOGFILE, CARBON_TRACE_LOGFILE, 
      DELETE_EVENT_LOGFILE, TRANSACTION_LOGFILE, osgi, CORRELATION
      ```
3.  Append the loggger `correlation` for list of all loggers as follows.       

      ```toml
      loggers = AUDIT_LOG, trace-messages, org-apache-coyote, com-hazelcast, Owasp-CsrfGuard, 
      org-apache-axis2-wsdl-codegen-writer-PrettyPrinter, org-apache-axis2-clustering, org-apache-catalina, 
      org-apache-tomcat, org-wso2-carbon-apacheds, org-apache-directory-server-ldap, org-apache-directory-server-core-event, com-atomikos, org-quartz, org-apache-jackrabbit-webdav, org-apache-juddi, org-apache-commons-digester-Digester, org-apache-jasper-compiler-TldLocationsCache, org-apache-qpid, org-apache-qpid-server-Main, qpid-message, qpid-message-broker-listening, org-apache-tiles, org-apache-commons-httpclient, org-apache-solr, me-prettyprint-cassandra-hector-TimingLogger, org-apache-axis-enterprise, org-apache-directory-shared-ldap, org-apache-directory-server-ldap-handlers, org-apache-directory-shared-ldap-entry-DefaultServerAttribute, org-apache-directory-server-core-DefaultDirectoryService, org-apache-directory-shared-ldap-ldif-LdifReader, org-apache-directory-server-ldap-LdapProtocolHandler, org-apache-directory-server-core, org-apache-directory-server-ldap-LdapSession, DataNucleus, Datastore, Datastore-Schema, JPOX-Datastore, JPOX-Plugin, JPOX-MetaData, JPOX-Query, JPOX-General, JPOX-Enhancer, org-apache-hadoop-hive, hive, ExecMapper, ExecReducer, net-sf-ehcache, axis2Deployment, equinox, tomcat2, StAXDialectDetector, org-apache-directory-api, org-apache-directory-api-ldap-model-entry, TRANSACTION_LOGGER, DELETE_EVENT_LOGGER, org-springframework, org-opensaml-xml-security-credential-criteria, org-wso2-carbon-user-core, org-wso2-carbon-identity, org-wso2-carbon-identity-sso-saml, correlation
      ```
4.  Following are the default correlation appender configuration. You can change any of these values using the log4j2
.properties. 

    ``` toml
    appender.CORRELATION.type = RollingFile
    appender.CORRELATION.name = CORRELATION
    appender.CORRELATION.fileName =${sys:carbon.home}/repository/logs/correlation.log
    appender.CORRELATION.filePattern =${sys:carbon.home}/repository/logs/correlation-%d{MM-dd-yyyy}.%i.log
    appender.CORRELATION.layout.type = PatternLayout
    appender.CORRELATION.layout.pattern = %d{yyyy-MM-dd HH:mm:ss,SSS}|%X{Correlation-ID}|%t|%mm%n
    appender.CORRELATION.policies.type = Policies
    appender.CORRELATION.policies.time.type = TimeBasedTriggeringPolicy
    appender.CORRELATION.policies.time.interval = 1
    appender.CORRELATION.policies.time.modulate = true
    appender.CORRELATION.policies.size.type = SizeBasedTriggeringPolicy
    appender.CORRELATION.policies.size.size=10MB
    appender.CORRELATION.strategy.type = DefaultRolloverStrategy
    appender.CORRELATION.strategy.max = 20
    appender.CORRELATION.filter.threshold.type = ThresholdFilter
    appender.CORRELATION.filter.threshold.level = INFO
    ```


### Enabling observability

Follow the steps below to enable product observability.

1.  Navigate to the `           <IS_HOME>/bin          ` directory on
    the command prompt.

    ``` java
        cd <IS_HOME>/bin
    ```

2.  To set the `           -DenableCorrelationLogs          ` property
    to `           true          `, execute the following command.

    ``` java
        For Mac/Linux   --> sh wso2server.sh -DenableCorrelationLogs=true start
        For Windows     --> wso2server.bat -DenableCorrelationLogs=true start
    ```

    !!! note    
        By default, this property is set to `           false          ` .
    

3.  Navigate to the `           <IS_HOME>/repository/logs          `
    directory.

    ``` java
        cd <IS_HOME>/repository/logs
    ```

    Notice that a separate log file called
    `           correlation.log          ` is created.

    ![Correlation.log](../assets/img/using-wso2-identity-server/correlation-log.png) 

Now you are ready to test the product observability of WSO2 IS.

!!! tip    
    In order to test product observability, make sure you create a service
    provider and generate client key and client secret, with which you can
    perform a secure database call. For more information on creating service
    providers, see [Adding a Service
    Provider.](../../learn/adding-and-configuring-a-service-provider#adding-a-service-provider)
    

### Log patterns

Following are the log patterns that support product observability.

#### JDBC database call logging

##### Format

``` java
timestamp | correlationID | threadID | duration | callType | startTime | methodName | query | connectionUrl 
```

##### Example

``` java
2018-10-22 17:54:46,869|cf57a4a6-3ba7-46aa-8a2b-f02089d0172c|http-nio-9443-exec-2|4|jdbc|1540211086865|executeQuery|SELECT ID, TENANT_ID, IDP_ID, PROVISIONING_CONNECTOR_TYPE, IS_ENABLED, IS_BLOCKING  FROM IDP_PROVISIONING_CONFIG WHERE IDP_ID=?|jdbc:mysql://localhost:13306/apimgtdb?autoReconnect=true&useSSL=false
```

#### LDAP database call logging

##### Format

``` java
timestamp | correlationID | threadID | duration | callType | startTime | methodName | providerUrl | principal | argsLengeth | args
```

##### Example

``` java
2018-10-2310:55:02,279|c4eaede8-914d-4712-b630-73f6534b8def|http-nio-9443-exec-18|19|ldap|1540272302260|search|ldap://localhost:10392|uid=admin,ou=system| ou=Users,dc=wso2,dc=org,(&(objectClass=person)(uid=admin)),javax.naming.directory.SearchControls@6359ae3a
```

#### Beginning of the request call

##### Format

``` java
timestamp | correlationID | threadID | duration | HTTP-In-Request | startTime | methodName | requestQuery | requestPath
```

##### Example

``` java
2018-11-0514:57:06,757|f884a93d-e3a3-431f-a1ea-f6973e125cb6|http-nio-9443-exec-28|0|HTTP-In-Request|1541410026757|GET|null|/carbon/admin/images/favicon.ico
```

#### Ending of the request call

##### Format

``` java
timestamp | correlationID | threadID | totalDurationForRequest | HTTP-In-Response | startTime | methodName | requestQuery | requestPath
```

##### Example

``` java
2018-11-05 14:57:06,764|f884a93d-e3a3-431f-a1ea-f6973e125cb6|http-nio-9443-exec-28|7|HTTP-In-Response|1541410026764|GET|null|/carbon/admin/images/favicon.ico
```

### Reading the logs

Let's analyze the following sample log lines to find if there are any
timing delays for the JDBC or LDAP calls.

<table>
    <td width="60%">
    <td width="40%">
    <tr>
        <td>
            <ol>
                <li><code>2018-11-0514:05:18,427|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|HTTP-In-Request|1541406918427|POST|null|/carbon/admin/login_action.jsp</code></li>
                <li><code>2018-11-0514:05:18,581|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|jdbc|1541406918581|executeQuery|SELECT * FROM IDN_RECOVERY_DATA WHERE USER_NAME = ? AND USER_DOMAIN = ? AND TENANT_ID = ?|jdbc:h2:./repository/database/WSO2CARBON_DB</code></li>
                <li><code>2018-11-0514:05:18,591|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|7|ldap|1541406918584|initialization|ldap://localhost:10389|uid=admin,ou=system|0|empty</code></li>
                <li><code>2018-11-0514:05:18,599|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|200|ldap|1541406918591|search|ldap://localhost:10389|uid=admin,ou=system|3| uid=admin,ou=Users,dc=WSO2,dc=ORG,(&(objectClass=person)(uid=admin)),javax.naming.directory.SearchControls@548e9a48</code></li>
                <li><code>2018-11-0514:05:18,610|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|jdbc|1541406918610|executeQuery|SELECT DATA_KEY, DATA_VALUE FROM IDN_IDENTITY_USER_DATA WHERE TENANT_ID = ? AND USER_NAME = ?|jdbc:h2:./repository/database/WSO2CARBON_DB</code></li>
                <li><code>2018-11-0514:05:18,632|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|16|ldap|1541406918616|initialization|ldap://localhost:10389|uid=admin,ou=system|0|empty</code></li>
                <li><code>2018-11-0514:05:18,641|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|jdbc|1541406918641|executeQuery|SELECT UM_ROLE_NAME, UM_RESOURCE_ID, UM_IS_ALLOWED, UM_ACTION, UM_DOMAIN_NAME FROM UM_PERMISSION, UM_ROLE_PERMISSION, UM_DOMAIN WHERE UM_ROLE_PERMISSION.UM_PERMISSION_ID=UM_PERMISSION.UM_ID AND UM_ROLE_PERMISSION.UM_DOMAIN_ID=UM_DOMAIN.UM_DOMAIN_ID AND UM_PERMISSION.UM_TENANT_ID=? AND UM_ROLE_PERMISSION.UM_TENANT_ID=?|jdbc:h2:./repository/database/WSO2CARBON_DB</code></li>
                <li><code>2018-11-0514:05:18,642|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|jdbc|1541406918642|executeQuery|SELECT UM_USER_NAME, UM_RESOURCE_ID, UM_IS_ALLOWED, UM_ACTION FROM UM_PERMISSION, UM_USER_PERMISSION WHERE UM_USER_PERMISSION.UM_PERMISSION_ID=UM_PERMISSION.UM_ID AND UM_PERMISSION.UM_TENANT_ID=? AND UM_USER_PERMISSION.UM_TENANT_ID=?|jdbc:h2:./repository/database/WSO2CARBON_DB</code></li>
                <li><code>2018-11-0514:05:18,696|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|0|jdbc|1541406918696|executeQuery|SELECT UM_RESOURCE_ID FROM UM_PERMISSION WHERE UM_ACTION=? AND UM_TENANT_ID=?|jdbc:h2:./repository/database/WSO2CARBON_DB</code></li>
                <li><code>2018-11-0514:05:18,715|86b56b19-7872-4e2f-84f3-5a14f92e18c1|http-nio-9443-exec-8|480|HTTP-In-Response|1541406918715|POST|null|/carbon/admin/login_action.jsp</code></li>
            </ol>
        </td>
        <td>
            <ul>
                <li><b>Line 1</b> is the <code>http-in-request</code>.</li>
                <li><b>Line 10</b> is the <code>http-in-response</code>, which shows
                that the total time taken for the cycle is
                <code>480 ms</code>. This is almost close to half a second.
                With that we can assume that there is a delay with either an LDAP or
                JDBC call.</li>
                <li>When we carefully analyze <b>each line</b>, we can see that all JDBC calls
                have taken less than <code>5 ms</code>.</li>
                <li><b>Line 4</b> however, indicates an LDAP call that has taken
                <code>200 ms</code>, which can be a possible reason for
                this issue. </li>
            </ul>
        </td>
    </tr>
</table>

### Advanced scenarios

Following are a few advance scenarios that are related to product
observability in WSO2 IS.

#### Defining denylists for the threads

Certain threads continuously print unnecessary logs. Defining denylists
prevents the unwanted threads from printing logs thereby improving the
readability of the logs.

Follow the steps below to configure denylists for threads. 

1.  Open either of the following files in the
    `          <IS_HOME>/bin         ` directory on a command prompt.
    1.  For Mac/Linux: `            wso2server.sh           ` file
    2.  For Windows: `            wso2server.bat           ` file
2.  Add the following configuration as a system property.

    ``` java
    -Dorg.wso2.CorrelationLogInterceptor.blacklistedThreads=threadName1,threadName2 \
    ```

    !!! tip
    
        Make sure to add it before the
        `           org.wso2.carbon.bootstrap.Bootstrap $*          ` line.
    
    !!! note
    
        This configuration is not required by default, as all unnecessary
        threads are already a part of the denylist in the
        `           MessageDeliveryTaskThreadPool          ` thread. If the
        above configuration is added, the default value will be overridden.
        

3.  Restart the WSO2 IS server.

    ``` java
        sh wso2server.sh -DenableCorrelationLogs=true stop
        sh wso2server.sh -DenableCorrelationLogs=true start
    ```


4.  To send the authentication request, execute the following cURL
    command.

    ``` java
        curl -v -k -X POST --basic -u <CLIENT_KEY>:<CLIENT_SECRET> -H "Content-Type: application/x-www-form-urlencoded;charset=UTF-8" -H "customHeader1:correlationvalue1" -H "customHeader2:correlationvalue2" -d "grant_type=client_credentials" https://localhost:9443/oauth2/token
    ```

    !!! tip
    
        Use the `           client key          ` and
        `           client secret          ` of the service provider you
        created after enabling product observability
    

5.  Open the `           correlation.log          ` on a command prompt
    and notice the related logs.

    ``` java
    tail -f ../repository/logs/correlation.log
    ```

    ![Correlation log screenshot](../assets/img/using-wso2-identity-server/correlation-log-screenshot-2.png)

### Lightweight directory access protocol tracing with OpenTelemetry

!!! note
    This feature became available in WSO2 Identity Server 5.11.0 update level 409. By default, the feature remains
    turned off to prevent potential performance impact.

The WSO2 Identity Server supports OpenTelemetry-based tracing for Lightweight Directory Access Protocol operations. This
improves observability and diagnostics for key identity interactions, such as user search, bind, and
lookup.

The implementation wraps the LdapContext to create OpenTelemetry spans for common Lightweight Directory Access Protocol 
methods. An OpenTelemetry agent, such as the Datadog Java Agent, captures these spans using standard 
OpenTelemetry mechanisms and displays them in tools like Datadog.

#### How it works

When enabled, the server wraps the standard LdapContext with an OpenTelemetry-instrumented implementation. Each call to 
operations like search, bind, or lookup generates a span.

Spans include key metadata such as:

- Lightweight Directory Access Protocol operation type
- Lightweight Directory Access Protocol provider details
- Base DN or target DN (if applicable)
- Search filters and attributes (if applicable)
- Execution duration
- Error status (if applicable)

The OpenTelemetry SDK exports spans. An agent, such as the Datadog Java Agent, then captures and sends them to external
observability platforms. A sample span content resembles the following (extracted from Datadog for the `ldap.search`
operation):

```json
{
  "ldap": {
    "filter": "(&(objectClass=***)(member=uid=***,ou=***,dc=***,dc=***))",
    "search": {
      "controls": "{scope=2, countLimit=0, timeLimit=0, returningAttributes=[cn], derefLinkFlag=false, returningObjFlag=false}"
    },
    "success": "true",
    "dn": "ou=***,dc=***,dc=***"
  },
  "peer": {
    "hostname": "localhost",
    "port": 10390,
    "service": "ldap"
  },
  "correlation_id": "8787f3ba-6149-4aa7-a620-77889664bae3",
  "language": "java",
  "thread": {
    "name": "https-jsse-nio-9443-exec-9",
    "id": 244
  },
  "env": "dev",
  "version": "1.0",
  "span": {
    "kind": "client"
  },
  "duration": 1211208
}
```

#### Configuring the WSO2 Identity Server

To enable Lightweight Directory Access Protocol tracing with OpenTelemetry in WSO2 Identity Server, configure the 
`[tracing.opentelemetry]` section in the `<IS_HOME>/repository/conf/deployment.toml` file. The following example
illustrates the configuration:

```toml
[tracing.opentelemetry]
ldap.enabled = true
ldap.scope_name = "wso2isldap"
```

| Configuration Parameter | Description                                                                                                                                                                                                                                                           |
|-------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `ldap.enabled`          | Enables OpenTelemetry-based tracing for Lightweight Directory Access Protocol operations. When set to `true`, WSO2 Identity Server instruments Lightweight Directory Access Protocol interactions such as search, bind, and lookup. The default value equals `false`. |
| `ldap.scope_name`       | Defines the OpenTelemetry instrumentation scope name for Lightweight Directory Access Protocol spans. The default value equals `"wso2isldap"`.                                                                                                                        |

#### Configuring with Datadog Java agent

To forward Lightweight Directory Access Protocol spans from WSO2 Identity Server to Datadog Application Performance 
Monitoring, you need both:

- The Datadog Java Agent (`dd-java-agent.jar`) attached to the WSO2 Identity Server JVM to instrument and generate
  spans.
- A running Datadog Agent that receives spans from the Java Agent and forwards them to the Datadog platform.

Steps:

1. Install and run the Datadog Agent - Follow
   the [Datadog Agent installation guide](https://docs.datadoghq.com/getting_started/agent/#setup) to install and run
   the Agent.
2. Download the Datadog Java Agent - Obtain the latest `dd-java-agent.jar `from
   the [Datadog releases page](https://docs.datadoghq.com/tracing/trace_collection/automatic_instrumentation/dd_libraries/java/?tab=wget).
3. Attach the Java Agent to WSO2 Identity Server - Edit `<IS_HOME>/bin/wso2server.sh` (Linux/macOS) or
   `wso2server.bat` (Windows) and add the following as a java option:
    ```shell
    -javaagent:/path/to/dd-java-agent.jar
    ```
4. Configure the Java Agent - Add the required system properties to the same file to define service metadata and Agent
   settings, as shown below (adjust according to your environment). For the complete list of available options and their
   descriptions, refer to
   the [Datadog Java Agent configuration documentation](https://docs.datadoghq.com/tracing/trace_collection/library_config/java/#configuration-options).
    ```shell
    -Ddd.service="wso2is" \
    -Ddd.env="dev" \
    -Ddd.version=1.0 \
    -Ddd.logs.injection=true \
    -Ddd.trace.agent.host=localhost \
    -Ddd.trace.otel.enabled=true \
    ```
5. Verify traces in Datadog - Restart the WSO2 Identity Server, perform Lightweight Directory Access Protocol operation
   related scenarios such as authentication flows, and verify that spans appear in
   your [Datadog APM dashboard](https://docs.datadoghq.com/tracing/).

#### Configuring with OpenTelemetry Java Agent

The WSO2 Identity Server supports exporting Lightweight Directory Access Protocol spans via the OpenTelemetry Java 
Agent, allowing you to send traces to any OpenTelemetry-compatible collector or observability platform. This provides 
flexibility to use open-source tools like Jaeger or Zipkin, as well as commercial platforms like Datadog APM. Please 
note that you will need both a receiver and an exporter to capture and forward the traces.

Steps:

1. Download the OpenTelemetry Java Agent - Obtain the latest `opentelemetry-javaagent.jar` from
   the [OpenTelemetry releases page](https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases).
2. Attach the agent to the WSO2 Identity Server - Edit your startup script (`<IS_HOME>/bin/wso2server.sh` or
   `<IS_HOME>/bin/wso2server.bat`) and add the following as a java option:
   ```shell
   -javaagent:/path/to/opentelemetry-javaagent.jar
   ```
3. Specify where spans should be sent (the collector) and the service name in the same file. Adjust the values according
   to your environment. For a complete list of available options and their descriptions, refer to
   theo [OpenTelemetry Java Agent documentation](https://opentelemetry.io/docs/zero-code/java/agent/configuration/).
   ```shell
   -Dotel.service.name=wso2is \
   -Dotel.exporter.otlp.protocol=grpc \
   -Dotel.exporter.otlp.endpoint=http://localhost:4317 \
   -Dotel.resource.attributes=env=dev,service.version=1.0.0 \
   ```
4. Restart the WSO2 Identity Server - Once the agent is attached and configured, restart the server to begin tracing
   Lightweight Directory Access Protocol operations.
